environments/prod/caddy/beszel-direct.yaml
apiVersion: v1
kind: Service
metadata:
  name: beszel-direct
  namespace: monitoring
spec:
  selector:
    app: beszel
    component: server
  ports:
  - name: http
    port: 80
    targetPort: 8090
  type: LoadBalancer
