environments/prod/caddy/grafana-direct.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-direct
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: grafana
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: LoadBalancer
