environments/prod/caddy/prometheus-direct.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-direct
  namespace: monitoring
spec:
  selector:
    app: prometheus
    component: server
  ports:
  - name: http
    port: 80
    targetPort: 9090
  type: LoadBalancer
